Diseño finalizado, falta 1 funcion

--- a/views/crud.ejs
+++ b/views/crud.ejs
@@ -85,6 +85,7 @@
           <a href="/homecrud#title-Distridulces">- ¿Quienes Somos?</a>
           <a href="/crud" >- Productos</a>
           <a href="/homecrud#contacto">- Contactanos</a>
+          <a href="logout">Cerrar sesion</a>
                 <label for="check" class="esconder-menu">
                   &#215
                 </label>
