--- a/views/home.ejs
+++ b/views/home.ejs
@@ -87,10 +87,15 @@
     
         <nav class="navbar-mobile">
           <img class="logo-mobile-navbar" src="resources/img/header/img-logo-mobile.png" />
-          <a href="/">- Inicio</a>
-          <a href="/">- ¿Quienes Somos?</a>
+          <a href="/home">- Inicio</a>
+          <a href="/home#title-Distridulces">- ¿Quienes Somos?</a>
           <a href="productPage" target="pages">- Productos</a>
-          <a href="/">- Contactanos</a>
+          <a href="/home#contacto">- Contactanos</a>
+          <a href="login">Iniciar sesion</a>
+
+          <label for="check" class="esconder-menu">
+            &#215
+          </label>
           
                 <div class="info-box-mobile">
                   <div class="info-adress">
@@ -124,7 +129,6 @@
         </nav>
     </div>
     <!-- Sección Banner -->
-    <section id="inicio">
         <section class="section-banner" id="section-banner">
             <div class="slider">
                 <% banners.forEach(banner => { %>
@@ -132,7 +136,6 @@
                 <% }); %>
             </div>
         </section>
-    </section>
 
     <!-- Sección Productos -->
     <section class="productos-section" id="productos">
@@ -166,6 +169,7 @@
                 <button class="prev-btn">&larr;</button>
                 <button class="next-btn">&rarr;</button>
         </div>
+        <a href="productPage" class="btn-mas-productos">Más productos</a>
     </section>
 
     </section>
