--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -83,10 +83,14 @@
     
         <nav class="navbar-mobile">
           <img class="logo-mobile-navbar" src="resources/img/header/img-logo-mobile.png" />
-          <a href="/">- Inicio</a>
-          <a href="/">- ¿Quienes Somos?</a>
+          <a href="/home">- Inicio</a>
+          <a href="/home#title-Distridulces">- ¿Quienes Somos?</a>
           <a href="productPage" target="pages">- Productos</a>
-          <a href="/">- Contactanos</a>
+          <a href="/home#contacto">- Contactanos</a>
+          <a href="login">Iniciar sesion</a>
+          <label for="check" class="esconder-menu">
+            &#215
+          </label>
           
                 <div class="info-box-mobile">
                   <div class="info-adress">
