--- a/public/styles/Home.css
+++ b/public/styles/Home.css
@@ -1,6 +1,6 @@
 body {
     background: #f5f5f5;
-    font-family: roboto;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: auto;
     text-align: center;
 }
@@ -14,6 +14,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 70px;
   }
   
   .header-mobile {
@@ -414,12 +415,13 @@ section {
     place-content: center;
     overflow: hidden;
     padding-top: 10px;
-    margin-bottom: -40px;
-    width: 80%; /* Ancho del contenedor */
+    width: 1000px; /* Ancho del contenedor */
     margin: 0 auto; /* Centrado horizontalmente */
     overflow: hidden; /* Para ocultar las imágenes que desborden el contenedor */
     position: relative; /* Para posicionar las imágenes */
-    height: 300px; /* Altura del contenedor */
+    height: 400px; /* Altura del contenedor */
+    border-radius: 20px;
+    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
 }
 
 .slider {
@@ -484,12 +486,13 @@ section {
 
 /* --------------------------- productos --------------------------------*/
 .productos-section {
+    margin-top: 25px;
     width: 100%;
     display: grid;
     place-content: center;
     background-color: #4c9fda25;
     padding-bottom: 90px;
-    padding-top: 50px;
+    padding-top: 20px;
 }
 
 .title-productos {
@@ -640,19 +643,23 @@ section {
     display: inline-block;
     padding: 8px 15px;
     text-decoration: none;
-    color: #000;
-    border: 2px solid #000;
+    color:  #FFF;
+    cursor: pointer;
+    border: 2px solid  #001f3f;
     border-radius: 25px;
     transition: background-color 0.3s, color 0.3s;
+    background-color:#001f3f;
     text-align: center;
     width: 150px;
     margin-left: auto;
     display: block;
+    margin-top: 50px;
+    font-weight: bold;
 }
 
-.btn-mas-productos:hover,
-.btn-mas-productos:visited {
-    color: #000;
+.btn-mas-productos:hover {
+    color: #001f3f;
+    background-color: #FFF;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -1075,6 +1082,7 @@ section {
 
     body {
         overflow-x: hidden;
+        margin: auto;
     }
 
     .header-desktop {
@@ -1148,10 +1156,21 @@ section {
         right: 0;
     }
 
+    .section-banner {
+        width: 100%;
+        height: 100%;
+        border-radius: 0px;
+    }
+
     .slider-mobile {
         height: auto;
         margin: auto;
         overflow: hidden;
+    }
+
+    .prev-btn,
+    .next-btn {
+        display: none;
     }
 
     .slider-mobile .fila {
