--- a/public/styles/crud.css
+++ b/public/styles/crud.css
@@ -4,6 +4,7 @@ body {
     height: auto;
     position: relative;
     overflow-x: hidden;
+    margin: auto;
 }
 /* ------------------------------------------ */
 .modal {
@@ -69,7 +70,7 @@ section {
     justify-content: space-between;
     position: absolute;
     right: 80px;
-    left: 87px;
+    left: 95px;
     top: 0px;
     height: 120px;
   }
