--- a/views/crud.ejs
+++ b/views/crud.ejs
@@ -46,6 +46,11 @@
                 </div>
               </div>
             </div>
+
+            <a href="logout" class="a-logout">
+              <div class="txt-iniciar-sesion"><strong style="color:#001f3f;">Cerrar sesion</strong></div>
+              <img class="user-img" src="resources/img/header/user.png" />
+              </a>
           </div>
         </div>
         
@@ -85,7 +90,6 @@
           <a href="/homecrud#title-Distridulces">- ¿Quienes Somos?</a>
           <a href="/crud" >- Productos</a>
           <a href="/homecrud#contacto">- Contactanos</a>
-          <a href="logout">Cerrar sesion</a>
                 <label for="check" class="esconder-menu">
                   &#215
                 </label>
@@ -118,10 +122,15 @@
                       </div>
                     </div>
                   </div>
+
+                  <a href="logout" class="boton">
+                    <img class="btn-img-user" src="resources/img/header/user.png" alt="Usuario" />
+                    <div class="txt-iniciar-sesion"><strong>Cerrar sesión</strong></div>
+                  </a>
                 </div>
         </nav>
       </div>
-
+   
     <div class="cotenedor-productpage">
 
         <section class="contenido" id="contenido">
