--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -46,6 +46,11 @@
                 </div>
               </div>
             </div>
+
+            <a href="login" class="a-logout">
+              <div class="txt-iniciar-sesion"><strong style="color:#001f3f;">Iniciar Sesion</strong></div>
+              <img class="user-img" src="resources/img/header/user.png" />
+            </a>
           </div>
         </div>
     
@@ -177,12 +182,27 @@
 
     </div>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <footer>
+      <div class="footer">
+        <div class="social-icons">
+          <a href=""><img class="img-instagram" src="resources/img/footer/img-instagram0.png" /></a>
+          <a href=""><img class="img-facebook" src="resources/img/footer/img-facebook0.png" /></a>
+          <a href=""><img class="img-whatapp" src="resources/img/footer/img-whatapp0.png" /></a>
+        </div>
+        <div class="txt-futer">
+          <div class="txt-copy">© 2024 - DISTRIDULCES.</div>
+          <div class="txt-footers">
+            <a href="" class="txt-footer1">Politicas</a>
+            <a href="" class="txt-footer2">Terminos y condiciones</a>
+            <a href="" class="txt-footer3">Contactanos</a>
+            <a href="" class="txt-footer4">Ubicanos</a>
+            <a href="" class="txt-footer5">Productos</a>
+            <a href="" class="txt-footer6">Quienes somos</a>
+          </div>
+        </div>
+        <img class="img-logo" src="resources/img/footer/img-logo0.png" />
+      </div>
+    </footer>
 
 
       
