--- a/views/homecrud.ejs
+++ b/views/homecrud.ejs
@@ -134,7 +134,7 @@
         <section class="section-banner" id="section-banner">
             <div class="slider">
                 <% banners.forEach(banner => { %>
-                    <img src="data:image/jpeg;base64,<%= Buffer.from(banner.image).toString('base64') %>" alt="<%= banner.id %>">
+                    <img class=".slider_img" src="data:image/jpeg;base64,<%= Buffer.from(banner.image).toString('base64') %>" alt="<%= banner.id %>">
                 <% }); %>
             </div>
         </section>
@@ -303,112 +303,27 @@
         </form>
     </section>
 </body>
+<footer>
+  <div class="footer">
+    <div class="social-icons">
+      <a href=""><img class="img-instagram" src="resources/img/footer/img-instagram0.png" /></a>
+      <a href=""><img class="img-facebook" src="resources/img/footer/img-facebook0.png" /></a>
+      <a href=""><img class="img-whatapp" src="resources/img/footer/img-whatapp0.png" /></a>
+    </div>
+    <div class="txt-futer">
+      <div class="txt-copy">© 2024 - DISTRIDULCES.</div>
+      <div class="txt-footers">
+        <a href="" class="txt-footer1">Politicas</a>
+        <a href="" class="txt-footer2">Terminos y condiciones</a>
+        <a href="" class="txt-footer3">Contactanos</a>
+        <a href="" class="txt-footer4">Ubicanos</a>
+        <a href="" class="txt-footer5">Productos</a>
+        <a href="" class="txt-footer6">Quienes somos</a>
+      </div>
+    </div>
+    <img class="img-logo" src="resources/img/footer/img-logo0.png" />
+  </div>
+</footer>
 
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        const slider = document.querySelector('.slider-mobile');
-        const fila = document.querySelector('.fila');
-        const items = document.querySelectorAll('.item');
-        const prevBtn = document.querySelector('.prev-btn');
-        const nextBtn = document.querySelector('.next-btn');
-      
-        let currentPosition = 0;
-        const itemWidth = items[0].offsetWidth;
-        const numItems = items.length;
-        const totalWidth = itemWidth * numItems;
-        
-        // Definir función para mover el slider
-        function moveSlider() {
-          if (currentPosition <= -totalWidth) {
-            currentPosition = 0;
-          } else {
-            currentPosition -= itemWidth;
-          }
-          fila.style.transform = `translateX(${currentPosition}px)`;
-        }
-      
-        // Establecer intervalo para el slider automático
-        const interval = setInterval(moveSlider, 3000);
-      
-        // Detener el slider automático al pasar el mouse sobre el slider
-        slider.addEventListener('mouseenter', () => clearInterval(interval));
-      
-        // Reanudar el slider automático al retirar el mouse del slider
-        slider.addEventListener('mouseleave', () => setInterval(moveSlider, 5000));
-      
-        // Agregar eventos a los botones de navegación
-        nextBtn.addEventListener('click', () => {
-          moveSlider();
-        });
-      
-        prevBtn.addEventListener('click', () => {
-          if (currentPosition >= 0) {
-            currentPosition = -totalWidth + itemWidth;
-          } else {
-            currentPosition += itemWidth;
-          }
-          fila.style.transform = `translateX(${currentPosition}px)`;
-        });
-      });
-      
-
-      // Inicializar el índice del slider
-    let currentIndex = 0;
-
-    function showUploadForm() {
-      document.getElementById('uploadForm').style.display = 'block';
-    }
-
-    function deleteImage() {
-        // Obtener la imagen actualmente mostrada
-        const currentImage = document.querySelector('.slider img');
-        
-        if (!currentImage) {
-          console.error('No se encontró ninguna imagen para eliminar.');
-          return; // Salir de la función si no se encuentra ninguna imagen
-        }
-        
-        // Obtener la ID de la imagen del atributo 'alt'
-        const imageId = currentImage.alt;
-      
-        // Construir la URL con la ID de la imagen
-        const deleteUrl = `/delete/${imageId}`;
-      
-        // Crear una solicitud POST para eliminar la imagen
-        fetch(deleteUrl, {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify({ imageId: imageId }) // Enviar la ID de la imagen en el cuerpo de la solicitud
-        })
-        .then(response => {
-          if (!response.ok) {
-            throw new Error('Error al eliminar la imagen');
-          }
-          console.log('Imagen eliminada exitosamente.');
-          window.location.reload();
-        })
-        .catch(error => {
-          console.error('Error al eliminar la imagen:', error.message);
-          // Manejar el error adecuadamente, como mostrar un mensaje al usuario
-        });
-      }
-      
-
-    // Función para avanzar al siguiente slide
-    function nextSlide() {
-      const slider = document.querySelector('.slider');
-      const slides = slider.querySelectorAll('img');
-      const slideWidth = slides[0].clientWidth;
-      
-      currentIndex = (currentIndex + 1) % slides.length;
-      const offset = -currentIndex * slideWidth;
-      
-      slider.style.transform = `translateX(${offset}px)`;
-    }
-
-    // Automáticamente avanzar al siguiente slide cada 3 segundos
-    setInterval(nextSlide, 3000);
-</script>
+<script src="resources/js/homecrud.js"></script>
 </html>
