--- a/styles/productCrud.css
+++ b/styles/productCrud.css
@@ -19,7 +19,7 @@ body {
 }
 
 .header-mobile {
-  background-color: #fff;
+  background-color:#eed816;
   height: 100px;
   display: flex;
   justify-content: space-between;
@@ -239,6 +239,10 @@ body {
   justify-content: center;
 }
 
+.navbar-mobile {
+  background-color: #ffd700;
+}
+
 .navbar-mobile .a-logout-mobile {
   position: relative;
   left: 100px;
@@ -425,6 +429,15 @@ input:focus {
     /* Para alinear las cards en la parte superior */
 }
 
+.lift {
+  transition: transform 0.15s ease-out;
+}
+
+.lift:hover,
+.lift:focus {
+  transform: translateY(-4px); /* Ajusta la distancia de levantamiento según tu preferencia */
+}
+
 
 .item .contenedor-foto {
     width: 100%;
@@ -465,91 +478,6 @@ input:focus {
     text-decoration: none;
 }
 
-/* --------------------------------------------------- */
-.product-detail {
-  width: 360px;
-  padding-bottom: 24px;
-  display: none;
-  position: fixed;
-  z-index: 1;
-  right: 0;
-  top: 0;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.product-detail-close {
-  background: var(--white);
-  width: 14px;
-  height: 14px;
-  position: absolute;
-  top: 24px;
-  left: 24px;
-  z-index: 2;
-  padding: 20px;
-  border-radius: 50%;
-}
-
-.product-detail-close:hover {
-  cursor: pointer;
-}
-
-.product-detail>img:nth-child(2) {
-  width: 100%;
-  height: 360px;
-  object-fit: cover;
-  border-radius: 0 0 20px 20px;
-}
-
-.product-info {
-  margin: 24px 24px 0 24px;
-}
-
-.product-info p:nth-child(1) {
-  font-weight: bold;
-  font-size: var(--md);
-  margin-top: 0;
-  margin-bottom: 4px;
-}
-
-.product-info p:nth-child(2) {
-  color: var(--very-light-pink);
-  font-size: var(--md);
-  margin-top: 0;
-  margin-bottom: 36px;
-}
-
-.product-info p:nth-child(3) {
-  color: var(--very-light-pink);
-  font-size: var(--sm);
-  margin-top: 0;
-  margin-bottom: 36px;
-}
-
-.primary-button {
-  background-color: var(--hospital-green);
-  border-radius: 8px;
-  border: none;
-  color: var(--white);
-  width: 100%;
-  cursor: pointer;
-  font-size: var(--md);
-  font-weight: bold;
-  height: 50px;
-}
-
-.add-to-cart-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-@media (max-width: 640px) {
-  .product-detail {
-    width: 100%;
-  }
-}
 
 /* --------------------------------------- */
 .footer {
@@ -646,13 +574,16 @@ input:focus {
 
 .mostrar-menu:hover,
 .esconder-menu:hover {
-  color: #ffd700;
+  color: #fff;
 }
 
 #check {
   display: none;
 }
 
+.dropdown {
+  display: none;
+}
 
 
 @media (max-width:720px) {
@@ -668,12 +599,20 @@ input:focus {
       .header-mobile {
         display: block;
       }
+
+      .category-menu {
+        display: none;
+      }
+
+      .dropdown {
+        display: block;
+      }
     
       .navbar-mobile {
         position: fixed;
         width: 100%;
         height: 140vh;
-        background: #fff;
+        background: #ffd700;
         right: -100%;
         top: 0;
         text-align: left;
@@ -697,7 +636,7 @@ input:focus {
       }
     
       .navbar-mobile a:hover {
-        color: #ffd700;
+        color: #fff;
       }
     
       .esconder-menu {
