--- a/styles/style.css
+++ b/styles/style.css
@@ -485,159 +485,138 @@ section {
 
 
 /* --------------------------- productos --------------------------------*/
-.productos-section {
-    margin-top: 25px;
-    width: 100%;
-    display: grid;
-    place-content: center;
-    background-color: #4c9fda25;
-    padding-bottom: 90px;
-    padding-top: 20px;
+:root {
+    --red: #2874A6;
+    --darkred: #ffd700;
+    --platinum: #e5e5e5;
+    --black: #2b2d42;
+    --white: #fff;
+    --thumb: #edf2f4;
 }
 
-.title-productos {
-    text-align: left;
-    font-family: "MergeOne-Regular", sans-serif;
-    font-size: 24px;
-    margin-bottom: 40PX;
-    padding-top: 20px;
-    font-weight: 800;
-    color: #001f3f;
-    margin-left: 40px;
+.container {
+    max-width: 1400px;
+    padding: 0 15px;
+    margin: 0 auto;
 }
 
-.slider-mobile {
-    overflow: hidden;
-    position: relative;
-    margin-left: 40px;
-    margin-right: 40px;
+h2 {
+    font-size: 32px;
+    margin-bottom: 1em;
 }
 
-.fila {
+.cards {
     display: flex;
-    transition: transform 0.5s ease;
+    padding: 25px 30px;
+    margin: 0 50px;
+    list-style: none;
+    overflow-x: scroll;
+    -ms-scroll-snap-type: x mandatory;
+    scroll-snap-type: x mandatory;
 }
 
-.item {
-    flex: 0 0 auto;
+.card {
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 100%;
+    padding: 20px;
+    background: var(--white);
+    border-radius: 12px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 15%);
+    scroll-snap-align: start;
+    transition: all 0.2s;
+    width: 100px;
+    height: 350px;
+}
+
+.card:not(:last-child) {
     margin-right: 10px;
 }
 
-.item {
-    flex: 1 0 200px;
-    max-width: 210px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding: 10px;
-    width: 189px;
-    height: 250px;
-    border-radius: 24px;
-    text-align: center;
-    margin: 0 10px;
-    border: 2px solid #001f3f;
-    display: grid;
-    vertical-align: top;
-    /* Agregamos estas propiedades para que se ajusten al diseño del slider */
-    position: relative;
-    overflow: hidden;
-    background: #d4dff2;
+.card:hover {
+    color: var(--white);
+    background: var(--red);
 }
 
-.item .contenedor-foto {
+.card img {
     width: 100%;
-    height: 120px;
+    height: 150px;
 }
 
-.item .contenedor-foto img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
-.item .contenedor-texto {
-    width: 100%;
-    height: 100%;
-}
-
-.item .nombre {
-    color: black;
-    font-family: "Inter-SemiBold", sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-}
-
-.item .descripcion {
-    display: none;
-}
-
-.item .precio {
-    color: #2b6be7;
-    font-family: "Inter-SemiBold", sans-serif;
-    font-weight: bold;
+.card .card-title {
     font-size: 20px;
-    margin-top: 5px;
+    margin: 20px 0;
 }
 
-.prev-btn,
-.next-btn {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(255, 255, 255, 0.5);
-    border: none;
-    padding: 5px 10px;
-    font-size: 20px;
-    cursor: pointer;
-    z-index: 1;
-    color: #000;
-    /* Color de las flechas */
-    border-radius: 50%;
-    /* Hacer el botón redondeado */
+.card .card-content {
+    margin: 20px 0;
+    max-width: 85%;
 }
 
-.prev-btn {
-    left: 10px;
+.card .card-link-wrapper {
+    margin-top: auto;
 }
 
-.next-btn {
-    right: 10px;
+.card .card-link {
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    background: var(--red);
+    padding: 6px 12px;
+    border-radius: 8px;
+    transition: background 0.2s;
 }
 
-.slider-mobile {
-    overflow: hidden;
-    position: relative;
+.card:hover .card-link {
+    background: var(--darkred);
 }
 
-.fila {
-    display: flex;
-    transition: transform 0.5s ease;
+.cards::-webkit-scrollbar {
+    height: 12px;
 }
 
-.item {
-    flex: 0 0 auto;
-    margin-right: 10px;
+.cards::-webkit-scrollbar-thumb,
+.cards::-webkit-scrollbar-track {
+    border-radius: 92px;
 }
 
-.prev-btn,
-.next-btn {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(255, 255, 255, 0.5);
-    border: none;
-    padding: 5px 10px;
-    font-size: 16px;
-    cursor: pointer;
-    z-index: 1;
+.cards::-webkit-scrollbar-thumb {
+    background: var(--darkred);
 }
 
-.prev-btn {
-    left: 10px;
+.cards::-webkit-scrollbar-track {
+    background: var(--thumb);
 }
 
-.next-btn {
-    right: 10px;
+@media (min-width: 500px) {
+    .card {
+        flex-basis: calc(50% - 10px);
+    }
+
+    .card:not(:last-child) {
+        margin-right: 20px;
+    }
 }
 
+@media (min-width: 700px) {
+    .card {
+        flex-basis: calc(calc(100% / 3) - 20px);
+    }
+
+    .card:not(:last-child) {
+        margin-right: 30px;
+    }
+}
+
+@media (min-width: 1100px) {
+    .card {
+        flex-basis: calc(25% - 30px);
+    }
+
+    .card:not(:last-child) {
+        margin-right: 40px;
+    }
+}
 
 .btn-mas-productos {
     display: inline-block;
@@ -744,49 +723,40 @@ section {
 .valores {
     box-sizing: border-box;
     display: flex;
-    flex-direction: row;
-    padding-left: 30px;
+    flex-direction: column;
+    padding: 30px;
     margin: auto;
-    max-width: auto;
     max-width: 1200px;
-    /* Ajusta el valor según tus necesidades */
 }
 
 .txt-content-valores {
     color: #001f3f;
     font-family: "Inter-Regular", sans-serif;
-    width: 50%;
+    width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    flex-wrap: wrap;
-    align-content: center;
+    text-align: center;
 }
-
 
 .txt-content-valores h2 {
     color: #001f3f;
     font-family: "Inter-Bold", sans-serif;
-    font-size: 40px;
-    line-height: 200%;
+    font-size: 24px;
+    line-height: 150%;
     font-weight: 700;
-    width: 417px;
-    height: 44.64px;
-    display: flex;
-    font-weight: 800;
+    width: 100%;
 }
 
 .txt-valores {
-    padding-right: 50px;
+    padding: 20px;
 }
 
 .img-valores {
     width: 100%;
+    max-width: 100%;
     object-fit: cover;
-    display: flex;
-    padding-left: 124px;
-    align-items: end;
-    margin-left: auto;
+    margin-top: 20px;
 }
 
 /* --------------------------- linea corporativa ------------------------------------- */
