--- a/styles/style.css
+++ b/styles/style.css
@@ -490,6 +490,19 @@ section {
 
 .product-slider {
     height: 700px;
+    margin-top: 30px;
+}
+.slider-container {
+  height: 330px;
+  margin: 40px 30px;
+}
+iframe {
+width: 100%;
+height: 100%;
+}
+iframe::-webkit-scrollbar-thumb {
+  background-color: #999; /* Color del thumb */
+  border-radius: 4px; /* Bordes redondeados */
 }
 
 .btn-mas-productos {
