--- a/styles/style.css
+++ b/styles/style.css
@@ -423,16 +423,16 @@ section {
     overflow: hidden; /* Para ocultar las imágenes que desborden el contenedor */
     position: relative; /* Para posicionar las imágenes */
     height: 400px; /* Altura del contenedor */
-    border-radius: 20px;
+    border-radius: 15px;
     box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
 }
 
-.slider {
+.slider-banner {
     display: flex; /* Mostrar las imágenes en una fila */
     transition: transform 0.5s ease; /* Animación para el desplazamiento de las imágenes */
 }
 
-.slider img {
+.slider-banner img {
     width: 100%; /* Ancho completo de la imagen */
     height: auto; /* Altura automática para mantener la proporción */
     object-fit: cover; /* Para cubrir todo el contenedor sin distorsionar */
@@ -487,26 +487,76 @@ section {
 }
 
 /* --------------------------- productos --------------------------------*/
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+  height: 350px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px;
+  transition: transform 0.3s ease-in-out;
+  box-sizing: border-box;
+  background-color: #ffffff;
+}
 
-.product-slider {
-    height: 500px;
-    margin-top: 30px;
+.item:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-.slider-container {
-  height: 330px;
-  margin: 40px 30px;
+
+.contenedor-foto {
+  flex: 1;
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-iframe {
-width: 100%;
-height: 100%;
+
+.contenedor-foto img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
 }
-iframe::-webkit-scrollbar-thumb {
-  background-color: #ffd700; /* Color del thumb */
-  border-radius: 10px; /* Bordes redondeados */
+
+.contenedor-texto {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-/* Ocultar las flechas del scrollbar */
-iframe {
-  scrollbar-arrow-color: transparent; /* Flechas del scrollbar */
+
+.nombre {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.descripcion {
+  font-size: 12px;
+  color: #999;
+  margin-top: 10px;
+  text-align: center;
+}
+
+.precio {
+  font-size: 16px;
+  color: #333;
+  text-decoration: line-through;
+  margin-top: 10px;
+}
+
+.precio-descuento {
+  font-size: 16px;
+  color: green;
+  margin-left: 5px;
+}
+
+.item a {
+  text-decoration: none;
 }
 
 .btn-mas-productos {
@@ -535,17 +585,12 @@ iframe {
 
 /* -------------------------- sobre nosotros --------------------------- */
 .title-Distridulces {
-    bottom: 0;
     color: #001f3f;
     margin-top: 50px;
-    margin-bottom: -5px;
-    text-align: center !important;
     font-family: Alfa Slab One, sans-serif;
     font-size: 90px;
-    line-height: .4em;
-    height: auto;
     font-weight: 800;
-    letter-spacing: -8px;
+    letter-spacing: -5px;
 }
 .mision {
   background-color: #4c9fda25;
@@ -556,14 +601,24 @@ iframe {
     justify-content: center;
     align-items: center;
 }
+.custom-title {
+    color: #001f3f;
+    font-family: Alfa Slab One, sans-serif;
+    font-size: 50px;
+    font-weight: 300;
+    letter-spacing: -2px;
+}
+.txt-mision {
+  width: 80%;
+  margin: 10px 60px;
+}
 /* --------------------------- valores ------------------------------------- */
 
-.valores {
+.txt-container {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
 /* --------------------------- linea corporativa ------------------------------------- */
 
 .lineacorporativa {
@@ -571,6 +626,46 @@ iframe {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+/* --------------------------- slider marcas ----------------------------------------- */
+
+.slider {
+  width: 90vw;
+  height: auto;
+  margin: auto;
+  overflow: hidden;
+  margin-top: 20px;
+  border-radius: 20px;
+}
+
+.slider .slide-track {
+  display: flex;
+  animation: scroll 40s linear infinite;
+  -webkit-animation: scroll 40s linear infinite;
+  width: calc(200px * 14);
+}
+
+.slider .slide {
+  width: 200px;
+  display: flex;
+  margin: 10px;
+}
+
+.slider .slide img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+
+@keyframes scroll {
+  0% {
+    -webkit-transform: translateX(0);
+    transfomrm: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(calc(-200px * 7));
+    transfomrm: translateX(calc(-200px * 7));
+  }
 }
 
 /* --------------------------- cotactanos ----------------------------------------- */
@@ -808,11 +903,20 @@ iframe {
 
     }
 
-    .title-Distridulces {
-        font-size: 50px;
+    .slider .slide-track {
+      display: flex;
+      animation: scroll 90s linear infinite;
+      -webkit-animation: scroll 90s linear infinite;
+      width: calc(200px * 14);
     }
 
+    .title-Distridulces {
+        font-size: 40px;
+    }
 
+    .custom-title {
+      font-size: 30px;
+    }
 
     .footer {
         box-sizing: border-box;
